--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
       <!-- /footer -->
       <!-- js -->
     <!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
     <script>
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
