--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
               <li class="nav-item dropdown">
                 <button class="nav-link dropdown-toggle text-info border-2 border-info rounded-3" href="#"
                   id="nav-Dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Courses
+                  Trips
                 </button>
                 <ul class="dropdown-menu mt-3  fade " aria-labelledby="nav-Dropdown">
-                  <li><a class="dropdown-item text-info" target="_blank" href="">python</a></li>
-                  <li><a class="dropdown-item text-info" target="_blank" href=""> java</a></li>
+                  <li><a class="dropdown-item text-info" target="_blank" href="">CAIRO</a></li>
+                  <li><a class="dropdown-item text-info" target="_blank" href=""> ALEX</a></li>
                   <li>
                     <hr class="dropdown-divider bg-info">
                   </li>
-                  <li><a class="dropdown-item text-info" target="_blank" href="">html</a></li>
-                  <li><a class="dropdown-item text-info" target="_blank" href="">css</a></li>
-                  <li><a class="dropdown-item text-info" target="_blank" href="">javascript</a></li>
-                  <li><a class="dropdown-item text-info" target="_blank" href="">bootstrap</a></li>
-                  <li><a class="dropdown-item text-info" target="_blank" href="">json</a></li>
+                  <li><a class="dropdown-item text-info" target="_blank" href="">LUXOR</a></li>
+                  <li><a class="dropdown-item text-info" target="_blank" href="">ASWAN</a></li>
+                  <li><a class="dropdown-item text-info" target="_blank" href="">SHARM EL SHIKH</a></li>
+                  <li><a class="dropdown-item text-info" target="_blank" href="">EL GLALA</a></li>
+                  <li><a class="dropdown-item text-info" target="_blank" href="">MORE ...</a></li>
 
                 </ul>
               </li>
@@ -713,7 +713,7 @@
       <!-- /footer -->
       <!-- js -->
     <!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
     <script>
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
