--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <input type="image" src="images/logo1.jpg" class="  rounded-circle mx-3 shadow" alt="pic" height="65px"
             width="65px">
           <a class="navbar-brand text-info m-3" href="#"
-            style="border-right:1px solid #ccc; padding-right: 10px; font-weight: bold;">Good</a>
+            style="border-right:1px solid #ccc; padding-right: 10px; font-weight: bold;">EGYPT</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
